# material-point-method-sim

./: .gitignore  APIC.cpp  APIC.h  AnalyticCollisionObject.cpp  AnalyticCollisionObject.h  AnalyticLevelSet.cpp  AnalyticLevelSet.h  CMakeLists.txt  README.md  SVD.cpp  SVD.h  UpdateF.h  advection.cpp  advection.h  computeMomentum.h  constitutiveModel.cpp  constitutiveModel.h  global.h  helloWorld.txt  interpolation.cpp  interpolation.h  main.cpp  mpmInitialize.h  readfile.h  scaleAndTranslateModel.cpp  setBoundaryVelocity.h  sparseDragon.vdb  sparseDragonSamples.txt  transfer.h  transferG2P.cpp  transferG2P.h  transferP2G.cpp  transferP2G.h  writeframe.h
Models/: veryDenseCube.txt
Test/: derivativeTest.cpp  derivativeTest.h  kernelTest.cpp  kernelTest.h
Videos/: JelloCollision_APIC_Gravity_E50_Isometric.mov  JelloCollision_APIC_Gravity_E50_Orthographic.mov  JelloCollision_APIC_NoGrav_E50_Isometric.mov  JelloCollision_APIC_NoGrav_E50_Orthographic.mov  JelloDragonFreefall_APIC_StVernant_E50.mov  JelloDragonFreefall_APIC_StVernant_E50_PerspectiveView.mov  JelloFreeFallComparison_APIC_Isometric.mov  JelloFreeFallComparison_APIC_Orthographic.mov  JelloFreeFallComparison_PIC_Isometric.mov  JelloFreeFallComparison_PIC_Orthographic.mov  JelloFreefallComparison_FLIP0.95_Isometric.mov  JelloFreefallComparison_FLIP0.95_Orthographic.mov
poissonDisk/: periodicPoisson.cpp  poissonDisk.cpp  veryDenseCube.vdb
